<resources>
    <string name="app_name">BLUR</string>
    <string name="intro_message">지친 하루를 달래줄\n당신의 소울메이트,\n지금 바로 찾아줄게요.</string>
    <string name="intro_start">대화 시작하기</string>
    <string name="intro_create_mine">내 질문 먼저 작성</string>
    <string name="quiz_description">총 %d개의 질문을 드릴게요.</string>
    <string name="quiz_description_2">O,X로 답해주세요.</string>
    <string name="question_description1">영혼의 친구를 찾아드릴게요.</string>
    <string name="question_description2">전송할 OX질문을 작성하세요.</string>
    <string name="first_question">맥주보다 소주가 좋다.</string>
    <string name="second_question">막창 대창을 즐겨먹는다.</string>
    <string name="third_question">발라드보다 힙합을 좋아한다.</string>
    <string name="fourth_question">불현듯 떠나는 여행을 즐긴다.</string>
    <string name="fifth_question">겨울엔 호떡보다 붕어빵이다.</string>
    <string name="quit_quiz_title">정말 나가실건가요?</string>
    <string name="quit_quiz_message">처음부터 새로운 문제를 풀어야해요.</string>
    <string name="quit_question_title">정말 나가실건가요?</string>
    <string name="quit_question_message">처음부터 다시 질문을 등록해야해요.</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="result_desc">결과를 분석중입니다...</string>

    <string-array name="question_hints">
        <item>맥주보다 소주가 좋다.</item>
        <item>막창 대창을 즐겨먹는다.</item>
        <item>발라드보다 힙합을 좋아한다.</item>
        <item>불현듯 떠나는 여행을 즐긴다.</item>
        <item>겨울엔 호떡보다 붕어빵이다.</item>
        <item>짜장면보다 짬뽕이 좋다.</item>
        <item>이성 간에 친구가 될 수 있다.</item>
        <item>나이 많은게 자랑이다.</item>
        <item>밖에 안나가면 안씻는다.</item>
        <item>라라랜드를 재밌게 봤다.</item>
    </string-array>
</resources>