<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    tools:context=".ui.intro.IntroActivity">

    <TextView
        android:id="@+id/id_quiz_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26.4sp"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@android:color/white"
        android:fontFamily="@font/notosanskr_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        android:text="@string/intro_message"/>

    <Button
        android:id="@+id/id_start_button"
        style="@style/ButtonStyle0"
        app:layout_constraintBottom_toTopOf="@id/id_create_mine_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/intro_start" />

    <Button
        android:id="@+id/id_create_mine_button"
        style="@style/ButtonStyle1"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/id_quiz_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.92"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/intro_create_mine" />

</android.support.constraint.ConstraintLayout>